# rust-wasm-monorepo-starter-pack

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  (+1 more)
apps/web/: Cargo.toml  README.md  index.html
apps/web/src/: app.rs  lib.rs  main.rs  routes.rs
apps/web/src/components/: header.rs  mod.rs  navbar.rs
apps/web/src/components/data/: list.rs  list_item.rs
apps/web/src/components/feedback/: alert.rs  loading_spinner.rs  mod.rs
apps/web/src/components/inputs/: button.rs
apps/web/src/components/layouts/: container.rs
apps/web/src/components/typography/: body_1.rs  heading_1.rs  heading_2.rs  heading_3.rs  mod.rs
apps/web/src/domain/: mod.rs
apps/web/src/domain/articles/: api.rs  mocks.rs  mod.rs  types.rs
apps/web/src/domain/articles/comments/: mocks.rs  mod.rs  types.rs
apps/web/src/domain/articles/comments/components/: comment_list.rs  mod.rs
apps/web/src/domain/articles/comments/mocks/: comments.rs
apps/web/src/domain/articles/components/: article_list.rs  article_page.rs  articles_page.rs  mod.rs
apps/web/src/domain/articles/mocks/: articles.rs
apps/web/src/domain/articles/types/: article.rs
apps/web/src/domain/home/components/: home_page.rs
apps/web/src/domain/not_found/components/: mod.rs  not_found_page.rs
apps/web/src/routes/: home.rs  mod.rs  videos.rs
apps/web/src/styles/: global.rs  mod.rs
apps/web/src/styles/theme/: mod.rs
apps/web/src/styles/theme/contexts/: mod.rs  theme_context.rs
apps/web/src/styles/theme/hooks/: mod.rs  use_theme.rs  use_theme_context.rs
apps/web/src/styles/theme/types/: breakpoints.rs  colors.rs  fonts.rs  mod.rs  palette.rs  spacings.rs  theme.rs  theme_kind.rs
apps/web/src/styles/theme/utils/: get_breakpoints.rs  get_colors.rs  get_fonts.rs  get_spacings.rs  get_theme.rs  mod.rs
apps/web/src/styles/theme/utils/colors/: get_colors.rs  get_dark_colors.rs  get_light_colors.rs  get_palette.rs  mod.rs
docs/: README.md  chosen-technologies.md  references.md
libs/api/: Cargo.toml
libs/api/src/: lib.rs
services/api/: Cargo.toml  README.md
services/api/src/: init_tracing.rs  main.rs
(+1 files in other folders)
