[package]
name = "acme-web"
version = "0.0.0"
edition = "2021"
description = "Yew web app for ACEM"
readme = "README.md"
repository = "https://github.com/Rock-n-Prog/rust-wasm-monorepo-starter-pack"
license = "MIT"
keywords = ["yew", "acme"]
categories = ["gui", "wasm", "web"]

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
